--- a/scienze.html
+++ b/scienze.html
@@ -246,7 +246,7 @@
 		che permettono la nostra ampia varietà di espressioni.<br><br>
 		I muscoli sono caratterizzati da due proprietà fondamentali che permettono il movimento:
 		l'<b>eccitabilità</b> e la <b>contrattilità</b>. L'<b>eccitabilità</b> è la caratteristica delle
-		fibrocellule di reagire a stimoli esterni contraendosi e rilassandosi.
+		fibrocellule di reagire a stimoli esterni contraendosi e rilassandosi
 		(<b>contrattilità</b>). Ciò accade grazie allo scorrimento dei miofilamenti di actina
 		su quelli di miosina che causa la contrazione del muscolo, per poi tornare allo stato
 		iniziale di rilassamento. Il movimento dello scheletro, però, avviene solo attraverso il
