--- a/storiacancelleresca.html
+++ b/storiacancelleresca.html
@@ -171,7 +171,7 @@
 		dal Boccaccio a Coluccio Salutati, che sarebbe in seguito diventato cancelliere di
 		Firenze e avrebbe commissionato a Poggio Bracciolini e Niccolò Niccoli 
 		una serie di manoscritti. Il primo in seguito si trasferì a Roma, mentre il secondo restò a 
-		Firenze e creò, ispirandosi alla <i>Lettera Antiqua</i>, la <b>Scrittura Italica</b>.
+		Firenze e creò, ispirandosi alla <i>Littera Antiqua</i>, la <b>Scrittura Italica</b>.
 		Le cancellerie di Roma adottarono subito questo stile per i documenti 
 		ufficiali e lo ribattezzarono <b>Cancelleresca</b>.<br></p>
 		<div class="img"><img src="img\cancell.jpg"/></div>
