--- a/scienze.html
+++ b/scienze.html
@@ -230,7 +230,7 @@
 				che avvicina l'avambraccio al braccio;
 			</li>
 			<li><b>estensori</b>, se allontanano un osso da un altro. Un esempio è il <b>tricipite</b>,
-				che svolge il lavoro opposto del bicipite.;
+				che svolge il lavoro opposto del bicipite;
 			</li>
 			<li><b>adduttori</b>, se avvicinano un osso alla linea mediana del corpo, come il <b>trapezio</b>,
 				che avvicina il braccio al corpo;
