--- a/musica.html
+++ b/musica.html
@@ -67,9 +67,9 @@
 		a circa cinquanta chilomentri da Eisenach. È in quegli anni che Bach comincia a interessarsi
 		di più agli altri musicisti della sua epoca, in particolare di Dietrich Buxtehude, che
 		ha occasione di ascoltare dopo oltre quattrocento chilometri di viaggio a piedi. Nel <b>1707</b>
-		lascia Arnstadt e si sposta a <b>Mühlhausen</b> per un'offerta da organista.
+		lascia Arnstadt e si sposta a <b>Mülhausen</b> per un'offerta da organista.
 		In questo periodo si dedica anche alla composizione di <b>cantate</b> e sposa
-		la cugina Maria Barbara. L'incarico a Mühlhausen, però, dura solo un anno e nel <b>1708</b>
+		la cugina Maria Barbara. L'incarico a Mülhausen, però, dura solo un anno e nel <b>1708</b>
 		si sposta a <b>Weimar</b>, dove assume l'incarico di <b>organista</b> e <b>maestro</b>, dedicandosi
 		anche alla composizione di <b>brani per organo</b> e <b>cantate</b>. Conosce anche la musica di
 		compositori italiani come Vivaldi. Il suo prossimo spostamento è nel <b>1717</b>, quando
