--- a/musica.html
+++ b/musica.html
@@ -106,7 +106,7 @@
 					<li>i <b><i>Concerti Brandeburghesi</i></b>; è un composto di sei concerti scritto
 						durante la sua permanenza a Köthen. Tra i vari concerti si possono notare le
 						differenze tra lo stile adottato, la composizione orchestrale, l'organizzazione
-						e l'articolazione dei movimenti.
+						e l'articolazione dei movimenti;
 					</li>
 					<li>le <b><i>Variazioni Goldberg</i></b>; sono un complesso di trenta variazioni
 						precedute dall'Aria e seguite da una ripetizione della stessa, ma 
