--- a/arte.html
+++ b/arte.html
@@ -238,7 +238,7 @@
 			infatti lo sfondo è molto scuro e fa risaltare i
 			personaggi, che a loro volta guidano l'occhio su Cocq, il quale indossa un vestito
 			nero contrastante con i vestiti chiari dei personaggi a lui più vicini, la 
-			fanciulla e il lungotenente Willem van Ruytenburch.
+			fanciulla e il luogotenente Willem van Ruytenburch.
 			</p>
 			<h5><i>La Ronda di Notte</i></h5>
 			<div class="img"><img src="img\rondadinotte.png"></div>
