--- a/tecnologia.html
+++ b/tecnologia.html
@@ -74,7 +74,7 @@
 			<li>la buona resistenza alla rottura;</li>
 			<li>la buona resistenza all'allungamento;</li>
 			<li>la buona lavorabilità;</li>
-			<li>la buona attitudine alla tintura;</li>
+			<li>la buona attitudine alla tintura.</li>
 		</ul>
 		<h2 class="nitit">Le fibre naturali</h2>
 		<p>
