--- a/educazionecivica.html
+++ b/educazionecivica.html
@@ -90,7 +90,7 @@
 				
 			</li>
 			<li>
-				art. 33:<br><br>
+				<b>art. 33:</b><br><br>
 				<i>L'arte e la scienza sono libere e libero ne è l'insegnamento.<br>La Repubblica detta le norme generali sull'istruzione ed istituisce scuole statali per 
 				tutti gli ordini e gradi.<br>Enti e privati hanno il diritto di istituire scuole ed istituti di educazione, senza oneri per lo Stato.<br>
 				La legge, nel fissare i diritti e gli obblighi delle scuole non statali che chiedono la parità, deve assicurare ad esse piena libertà e ai loro alunni
@@ -107,7 +107,7 @@
 				
 			</li>
 			<li>
-				art. 34:<br><br>
+				<b>art. 34:</b><br><br>
 				<i>La scuola è aperta a tutti.<br>L'istruzione inferiore, impartita per almeno otto anni, è obbligatoria e gratuita.<br>I capaci e meritevoli, 
 				anche se privi di mezzi, hanno diritto di raggiungere i gradi più alti degli studi.<br>La Repubblica rende effettivo questo diritto con borse 
 				di studio, assegni alle famiglie ed altre provvidenze, che devono essere attribuite per concorso.</i><br><br>
