--- a/storia.html
+++ b/storia.html
@@ -93,7 +93,7 @@
 			<li><b>Filippo Brunelleschi</b>; fu l'architetto che progettò la cupola di <b><i>S. Maria del Fiore
 				a Firenze</i></b>, dal geniale progetto, nel quale venne inserita un'intercapedine
 				tra una cupola esterna, più grande, e una cupola interna.
-				Fu colui che scoprì e studiò, assieme a Piero Della Francesca e 
+				Fu colui che scoprì e studiò, assieme a <b>Piero Della Francesca</b> e 
 				<b>Leon Battista Alberti</b> la prospettiva lineare centrica, che permetteva di
 				rappresentare in modo molto più realistico una scena. Anche oggi
 				si applica la prospettiva basandola sui metodi di Brunelleschi, definendo un <i>
