--- a/storia.html
+++ b/storia.html
@@ -90,7 +90,7 @@
 		&emsp;&emsp;Gli artisti rinascimentali sono molto numerosi, ma possiamo sicuramente ricordare:
 		</p>
 		<ul>
-			<li><b>Filippo Brunelleschi</b>; fu l'architetto che progettò la cupola di <b><i>S. Maria del Fiore
+			<li><b>Filippo Brunelleschi</b>: fu l'architetto che progettò la cupola di <b><i>S. Maria del Fiore
 				a Firenze</i></b>, dal geniale progetto, nel quale venne inserita un'intercapedine
 				tra una cupola esterna, più grande, e una cupola interna.
 				Fu colui che scoprì e studiò, assieme a <b>Piero Della Francesca</b> e 
@@ -100,12 +100,12 @@
 				punto di fuga</i> nel quale ogni punto degli oggetti rappresentati deve convergere,
 				attraverso una linea immaginaria.
 			</li>
-			<li><b>Michelangelo Buonarroti</b>; architetto, scultore e pittore, divenuto
+			<li><b>Michelangelo Buonarroti</b>: architetto, scultore e pittore, divenuto
 				famoso per opere quali: il <b><i>Mosè</i></b>, il <b><i>David</i></b> e la <b><i>Pietà</i></b>, nel campo della scultura;
 				la <b><i>Basilica di S. Pietro</i></b> a Roma, in architettura; infine, la <b><i>volta della
 				Cappella Sistina</i></b> e il <b><i>Giudizio Universale</i></b>, in pittura;
 			</li>
-			<li><b>Raffaello Sanzio</b>; affrescò la Stanza della Segnatura dei Palazzi Vaticani
+			<li><b>Raffaello Sanzio</b>: affrescò la Stanza della Segnatura dei Palazzi Vaticani
 				con la famosissima <b><i>Scuola Di Atene</i></b>, un affresco che rappresenta uno spazio in stile classico
 				 dove discutono i più grandi filosofi e studiosi dell'Antica Grecia, rappresentati, però,
 				con i volti dei personaggi dell'epoca, quali Leonardo Da Vinci (Platone),
@@ -118,10 +118,10 @@
 				S. Pietro, ma il suo progetto non venne concluso, a causa della sua morte.
 				Venne poi continuato da Michelangelo.
 			</li>
-			<li><b>Sandro Botticelli</b>; dipinse <b><i>La primavera</i></b> e <b><i>La nascita di Venere</i></b>,
+			<li><b>Sandro Botticelli</b>: dipinse <b><i>La primavera</i></b> e <b><i>La nascita di Venere</i></b>,
 				entrambi realizzati utilizzando la tempera e ora conservati agli Uffizi.
 			</li>
-			<li><b>Leonardo Da Vinci</b>; i due suoi dipinti più importanti sono <b><i>La Gioconda</i></b> e 
+			<li><b>Leonardo Da Vinci</b>: i due suoi dipinti più importanti sono <b><i>La Gioconda</i></b> e 
 				<b><i>L'Ultima Cena</i></b>. Nella prima viene ritratta una figura femminile, raffigurata molto
 				realisticamente grazie all'assenza di contorni netti, ma al passaggio da
 				luce a ombra. Sullo sfondo invece, un paesaggio naturale, anch'esso reso
