--- a/storia.html
+++ b/storia.html
@@ -113,7 +113,7 @@
 				Si può trovare anche un autoritratto di Raffaello, rappresentato come un popolano che
 				osserva.
 			</li>
-			<li><b>Donato Bramante</b>; fu l'architetto prediletto da papa Giulio II, tanto che lo nominò
+			<li><b>Donato Bramante</b>: fu l'architetto prediletto da papa Giulio II, tanto che lo nominò
 				architetto pontificio. A lui venne dato l'incarico di riprogettare la Basilica di
 				S. Pietro, ma il suo progetto non venne concluso, a causa della sua morte.
 				Venne poi continuato da Michelangelo.
