--- a/geografia.html
+++ b/geografia.html
@@ -85,7 +85,7 @@
 		le temperature e a Oslo, ad esempio, si possono raggiungere anche i 30°C tra giugno e luglio, ma,
 		al contrario, durante i mesi invernali si arriva anche ai -5°C. Il posto più freddo, però, è l'arcipelago
 		delle <b>Isole Svalbard</b>. Qui le temperature sono estreme e si raggiungono
-		molto facilmente i -40°C. Molto probabilmente è questo il motivo per cui ci vivono solo 2900 persone.<br>
+		molto facilmente i -40°C. Probabilmente è questo il motivo per cui ci vivono solo 2900 persone.<br>
 		&emsp;&emsp;Nella Norvegia peninsulare, invece, vivono oltre 5.000.000 di persone di varie etnie:
 		norvegesi, finlandesi, sami (lapponi), marocchini, pakistani, iracheni, danesi e svedesi. La maggior parte delle
 		persone fa parte di una chiesa di stampo protestante, la <b>Chiesa di Norvegia</b>, ma non mancano 
@@ -96,7 +96,7 @@
 		e svedese non è difficoltosa, a causa della somiglianza con il norvegese, l'inglese è
 		conosciuto da tutta la popolazione e il finlandese e il sami sono stati adottati
 		da alcune contee come lingue ufficiali.<br>La Norvegia è una monarchia parlamentare
-		organizzata in contee, che a oggi sono 15. Alcuni esempi sono</p>
+		organizzata in contee che, a oggi, sono 15. Alcuni esempi sono:</p>
 		<ul>
 			<li>La contea di <b>Troms</b>, che ospita <b>Tromsø</b>, 
 				molto nota per le sue aurore boreali;
