--- a/scienze.html
+++ b/scienze.html
@@ -62,26 +62,26 @@
 		Le <b>ossa</b> sono costituite da due particolari tessuti connettivi:
 		</p>
 		<ul>
-			<li>il <b>tessuto osseo</b>; esso è formato da una sostanza intercellulare
+			<li>il <b>tessuto osseo</b>: è formato da una sostanza intercellulare
 				dove si trovano gli osteociti, delle particolari cellule, disposte in 
 				maniera concentrica attorno a dei canali, detti <b>canali di Havers</b>, dove 
 				passano i vasi sanguigni. La sostanza intercellulare è invece formata
 				da acqua mescolata con osseina, che rende l'osso elastico,
 				e sali minerali, che lo rendono duro;
 			</li>
-			<li>il <b>tessuto cartilagineo</b>; è formato invece da condrociti immersi in
+			<li>il <b>tessuto cartilagineo</b>: è formato invece da condrociti immersi in
 				una densa sostanza intercellulare ricca di collagene, priva di nervi
 				e vasi sanguigni e molto elastica.
 			</li>
 		</ul>
 		<p>Il <b>tessuto osseo</b>, in base alla sua struttura più o meno compatta, si differenzia in:</b>
 		<ul>
-			<li><b>tessuto osseo compatto</b> formato da lamelle ossee aderenti l'una all'altra, senza
+			<li><b>tessuto osseo compatto</b>: è formato da lamelle ossee aderenti l'una all'altra, senza
 				dello spazio tra esse. Si trova spesso nelle diafisi e
 				delle ossa lunghe, come rivestimento delle ossa corte e all'interno
 				delle ossa piatte;
 			</li>
-			<li><b>tessuto osseo spugnoso</b>, formato da una struttura ad alveare delle lamelle con
+			<li><b>tessuto osseo spugnoso</b>: è formato da una struttura ad alveare delle lamelle con
 				molto spazio tra l'una e l'altra.
 			</li>
 		</ul>
@@ -93,15 +93,15 @@
 		Per quanto riguarda le forme delle
 		ossa, distinguiamo: </p>
 		<ul>
-			<li>le <b>ossa lunghe</b>; come dice il nome, si sviluppano maggiormente
+			<li>le <b>ossa lunghe</b>: come dice il nome, si sviluppano maggiormente
 				in lunghezza. Le estremità sono ingrossate e vengono chiamate
 				<b>epifisi</b>, mentre la parte centrale è la <b>diafisi</b>. Un esempio è
 				l'omero;
 			</li>
-			<li>le <b>ossa corte</b>; sono ossa che, sia in lunghezza che in larghezza
+			<li>le <b>ossa corte</b>: sono ossa che, sia in lunghezza che in larghezza
 				e spessore, sono egualmente sviluppate. Degli esempi sono le vertebre;
 			</li>
-			<li>le <b>ossa piatte</b>; sono ossa che si sviluppano perlopiù in superficie, 
+			<li>le <b>ossa piatte</b>: sono ossa che si sviluppano perlopiù in superficie, 
 				e poco in spessore. Le ossa del cranio o le scapole sono degli 
 				ottimi esempi di ossa piatte.
 			</li>
@@ -110,23 +110,23 @@
 		&emsp;&emsp;Le <b>articolazioni</b> sono invece le strutture che collegano le ossa e 
 		ne permettono il movimento. Si distinguono in:
 		<ul>
-			<li><b>articolazioni fisse</b>; non permettono alcun movimento e sono incastrate
+			<li><b>articolazioni fisse</b>: non permettono alcun movimento e sono incastrate
 				tra loro. Un esempio è quello delle ossa del cranio e le loro articolazioni
 				si chiamano <b>suture</b>;
 			</li>
-			<li><b>articolazioni semimobili</b>; permettono movimenti parziali e sono formate da una
+			<li><b>articolazioni semimobili</b>: permettono movimenti parziali e sono formate da una
 				giuntura cartilaginea. Sono articolazioni semimobili quelle delle vertebre;
 			</li>
-			<li><b>articolazioni mobili</b>; permettono ampi movimenti e sono costituite da legamenti
+			<li><b>articolazioni mobili</b>: permettono ampi movimenti e sono costituite da legamenti
 				fibrosi. Possono essere classificate a loro volta in articolazioni mobili:
 				<ul>
-					<li><b>a cerniera</b>; un osso con estremità cilindrica ruota all'interno della
+					<li><b>a cerniera</b>: un osso con estremità cilindrica ruota all'interno della
 						cavità di un altro osso adiacente;
 					</li>
-					<li><b>a sfera</b>; simile alla precedente, ma la cavità in cui ruota l'osso è
+					<li><b>a sfera</b>: simile alla precedente, ma la cavità in cui ruota l'osso è
 						sferica e della stessa forma è l'osso rotante;
 					</li>
-					<li><b>a perno</b>; un osso ruota su un altro come un perno; </li>
+					<li><b>a perno</b>: un osso ruota su un altro come un perno; </li>
 				</ul>
 			</li>
 		</ul>
@@ -135,7 +135,7 @@
 		articolazioni, che compongono lo scheletro, diviso in:
 		</p>
 		<ul>
-			<li><b>scheletro del capo</b>; è a sua volta diviso in:
+			<li><b>scheletro del capo</b>, che è a sua volta diviso in:
 				<ul>
 					<li><b>scatola cranica</b>, che ha il compito di proteggere l'encefalo ed 
 						è formato da ossa piatte unite da suture;
@@ -147,7 +147,7 @@
 					</li>
 				</ul>
 			</li>
-			<li><b>scheletro del tronco</b>, suddiviso in:
+			<li><b>scheletro del tronco</b> suddiviso in:
 				<ul>
 					<li><b>colonna vertebrale</b>; è formata da <b>33-34 ossa corte</b> sovrapposte e
 						legate da articolazioni semimobili. Tra di esse è anche presente un
@@ -171,9 +171,9 @@
 					</li>
 				</ul>
 			</li>
-			<li><b>scheletro degli arti</b>. Distinguiamo:
+			<li><b>scheletro degli arti</b> distinto in:
 				<ul>
-					<li><b>arti superiori</b>; sono divisi in: <b>braccio</b>, <b>avambraccio</b> e
+					<li><b>arti superiori</b>: sono divisi in: <b>braccio</b>, <b>avambraccio</b> e
 						<b>mano</b>. Il braccio è formato esclusivamente dall'<b>omero</b> che
 						si articola con la scapola superiormente e con <b>radio ed ulna</b>
 						inferiormente. Questi ultimi sono paralleli e compongono
@@ -181,7 +181,7 @@
 						superiormente con radio ed ulna ed è composta da <b>carpo</b> (polso),
 						<b>metacarpo</b> e <b>falangi</b> (che compongono le dita);
 					</li>
-					<li><b>arti inferiori</b>; sono divisi in: <b>coscia</b>, <b>gamba</b> e <b>piede</b>.
+					<li><b>arti inferiori</b>: sono divisi in: <b>coscia</b>, <b>gamba</b> e <b>piede</b>.
 						La coscia è costituita dal <b>femore</b>, che si articola superiormente
 						allo scheletro attraverso <b>ileo</b>, <b>ischio</b> e <b>pube</b> (bacino).
 						Inferiormente, si articola attraverso la <b>rotula</b> con <b>tibia
@@ -194,9 +194,9 @@
 		</ul>
 		<p>
 		&emsp;&emsp;In generale, il sistema scheletrico svolge importanti funzioni per
-		l'organismo: <b>sostegno</b> — assicura il mantenimento della posizione eretta —, 
-		<b>movimento</b>, assieme ai muscoli, e <b>protezione</b> — racchiudendo organi come cuore,
-		polmoni e cervello.
+		l'organismo: <b>sostegno</b> (assicura il mantenimento della posizione eretta), 
+		<b>movimento</b>, assieme ai muscoli, e <b>protezione</b> (racchiudendo organi come cuore,
+		polmoni e cervello).
 		</p>
 		<h2 class="nitit">Il sistema muscolare</h2>
 		<p>
@@ -209,11 +209,11 @@
 		due tipi di tessuto muscolare:
 		</p>
 		<ul>
-			<li><b>tessuto muscolare liscio</b>; si tratta di un tessuto muscolare liscio se actina e miosina
+			<li><b>tessuto muscolare liscio</b>: si tratta di un tessuto muscolare liscio se actina e miosina
 				non sono distribuite in modo regolare. È caratteristico dei <b>muscoli involontari</b>, come
 				polmoni o intestino;
 			</li>
-			<li><b>tessuto muscolare striato</b>; in essi le bande di actina e miosina sono regolari.
+			<li><b>tessuto muscolare striato</b>: in essi le bande di actina e miosina sono regolari.
 				Costituisce i <b>muscoli volontari</b>, quali <b>bicipite</b> o <b>tricipite</b>. Un particolare
 				caso è quello del <b>muscolo cardiaco</b>, che, seppur formato da tessuto striato, è
 				un muscolo involontario.
@@ -256,7 +256,7 @@
 		flesso sul braccio; al contrario, quando il bicipite è rilassato, il tricipite
 		è contratto e l'avambraccio è nella sua posizione naturale.<br><br>
 		&emsp;&emsp;Infine, il sistema muscolare svolge importantissime funzioni nel nostro
-		organismo, poiché: <b>sostiene e sorregge</b> lo scheletro, <b>permette il funzionamento degli organi interni</b>
+		organismo, poiché <b>sostiene e sorregge</b> lo scheletro, <b>permette il funzionamento degli organi interni</b>
 		e contribuisce alla <b>termoregolazione</b> (ad esempio, quando la temperatura si abbassa, si hanno i
 		brividi, delle contrazioni muscolari che liberano energia sotto forma di calore).
 		</p>
