--- a/scienze.html
+++ b/scienze.html
@@ -137,10 +137,10 @@
 		<ul>
 			<li><b>scheletro del capo</b>, che è a sua volta diviso in:
 				<ul>
-					<li><b>scatola cranica</b>, che ha il compito di proteggere l'encefalo ed 
+					<li><b>scatola cranica</b>: ha il compito di proteggere l'encefalo ed 
 						è formato da ossa piatte unite da suture;
 					</li>
-					<li><b>scheletro facciale</b>, che serve a proteggere organi quali bocca
+					<li><b>scheletro facciale</b>: serve a proteggere organi quali bocca
 						o naso. È formato da ossa di forme diverse e di piccole dimensioni, 
 						saldate da articolazioni fisse. L'unica eccezione è la mandibola,
 						unico osso mobile del capo.
@@ -149,7 +149,7 @@
 			</li>
 			<li><b>scheletro del tronco</b> suddiviso in:
 				<ul>
-					<li><b>colonna vertebrale</b>; è formata da <b>33-34 ossa corte</b> sovrapposte e
+					<li><b>colonna vertebrale</b>: è formata da <b>33-34 ossa corte</b> sovrapposte e
 						legate da articolazioni semimobili. Tra di esse è anche presente un
 						disco intervertebrale, che attutisce i colpi e conferisce elasticità.
 						Ogni vertebra è composta da un <b>massiccio osso corto</b> e da un arco; insieme
@@ -160,7 +160,7 @@
 						<b>dorsale</b> o <b>toracica</b>, <b>lombare</b>, <b>sacrale</b> (5 vertebre fuse nell'
 						<b>osso sacro</b>) e <b>coccigea</b> (4-5 vertebre fuse nel <b>coccige</b>);
 					</li>
-					<li><b>gabbia toracica</b>, che protegge cuore e polmoni. È formata da
+					<li><b>gabbia toracica</b>: protegge cuore e polmoni. È formata da
 						ossa piatte curve, le <b>costole</b>, che sono legate alla colonna vertebrale
 						per mezzo di articolazioni mobili. Sono dodici per lato e si dividono in:
 						<b>costole vere</b> — che sono sette e che si collegano direttamente
@@ -173,7 +173,7 @@
 			</li>
 			<li><b>scheletro degli arti</b> distinto in:
 				<ul>
-					<li><b>arti superiori</b>: sono divisi in: <b>braccio</b>, <b>avambraccio</b> e
+					<li><b>arti superiori</b>: sono divisi in <b>braccio</b>, <b>avambraccio</b> e
 						<b>mano</b>. Il braccio è formato esclusivamente dall'<b>omero</b> che
 						si articola con la scapola superiormente e con <b>radio ed ulna</b>
 						inferiormente. Questi ultimi sono paralleli e compongono
@@ -181,7 +181,7 @@
 						superiormente con radio ed ulna ed è composta da <b>carpo</b> (polso),
 						<b>metacarpo</b> e <b>falangi</b> (che compongono le dita);
 					</li>
-					<li><b>arti inferiori</b>: sono divisi in: <b>coscia</b>, <b>gamba</b> e <b>piede</b>.
+					<li><b>arti inferiori</b>: sono divisi in <b>coscia</b>, <b>gamba</b> e <b>piede</b>.
 						La coscia è costituita dal <b>femore</b>, che si articola superiormente
 						allo scheletro attraverso <b>ileo</b>, <b>ischio</b> e <b>pube</b> (bacino).
 						Inferiormente, si articola attraverso la <b>rotula</b> con <b>tibia
