--- a/musica.html
+++ b/musica.html
@@ -103,17 +103,17 @@
 		<ul>
 			<li>Tra le <u>opere profane</u>: 
 				<ul>
-					<li>i <b><i>Concerti Brandeburghesi</i></b>; è un composto di sei concerti scritto
+					<li>i <b><i>Concerti Brandeburghesi</i></b>: è un composto di sei concerti scritto
 						durante la sua permanenza a Köthen. Tra i vari concerti si possono notare le
 						differenze tra lo stile adottato, la composizione orchestrale, l'organizzazione
 						e l'articolazione dei movimenti;
 					</li>
-					<li>le <b><i>Variazioni Goldberg</i></b>; sono un complesso di trenta variazioni
+					<li>le <b><i>Variazioni Goldberg</i></b>: sono un complesso di trenta variazioni
 						precedute dall'Aria e seguite da una ripetizione della stessa, ma 
 						eseguita diversamente. Sono tutte in tonalità di Sol maggiore
 						tranne la 15, la 21 e la 25;
 					</li>
-					<li><b><i>Il clavicembalo ben temperato</i></b>; è formato da due libri; il
+					<li><b><i>Il clavicembalo ben temperato</i></b>: è formato da due libri; il
 						primo venne scritto mentre si trovava a Köthen, nel 1722, mentre 
 						il secondo venne scritto ventidue anni dopo, quando il compositore
 						si trovava a Lipsia.
@@ -122,14 +122,14 @@
 			</li>
 			<li>Tra le <u>opere sacre</u>: 
 				<ul>
-					<li>la <b><i>Passione secondo San Matteo</i></b>; è una trasposizione musicale della
+					<li>la <b><i>Passione secondo San Matteo</i></b>: è una trasposizione musicale della
 						traduzione tedesca di Martin Lutero dei capitoli XXVI e 
 						XXVII del Vangelo secondo Matteo. Venne composta nel 1727 durante la 
 						permanenza a Lipsia del compositore e all'interno si trovano delle 
 						parti vocali non solo per Gesù, ma anche per Giuda, Pietro,
 						Ponzio Pilato, sua moglie e due ancelle;
 					</li>
-					<li>la <b><i>Passione secondo San Giovanni</i></b>; venne scritta durante il periodo 
+					<li>la <b><i>Passione secondo San Giovanni</i></b>: venne scritta durante il periodo 
 						trascorso a Köthen nel 1722 e si basa sui capitoli XVIII e 
 						XIX della traduzione tedesca di Martin Lutero del Vangelo
 						secondo Giovanni. Narra alcuni episodi chiave tratti dal Vangelo: la
