--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<h1>La calligrafia Cancelleresca</h1>
 			<h2>Home</h2>
 		</div>
-		<p>Ritrovarsi tra le mani un libro secolare
+		<p>&emsp;&emsp;Ritrovarsi tra le mani un libro secolare
 		   è sicuramente molto emozionante, ma quando
 		   lo si apre si è subito attratti da una cosa
 		   in particolare: il testo. Regolare, compatto,
