--- a/letteratura.html
+++ b/letteratura.html
@@ -103,25 +103,25 @@
 		può essere divisa in quattro fasi:
 		</p>
 		<ul>
-			<li>il <b>periodo dell'apprendistato</b> (1591-1596 circa); scrisse drammi storici come
+			<li>il <b>periodo dell'apprendistato</b> (1591-1596 circa): scrisse drammi storici come
 				<b><i>Henry VI</i></b> e <b><i>Richard III</i></b>, che ritraevano il Medioevo e 
 				il Rinascimento inglesi. Scrisse anche raffinate commedie d'amore, come
 				<b><i>The Two Gentlemen of Verona</i></b> e <b><i>Love's Labour's Lost</i></b>, e 
 				due capolavori, <b><i>Romeo and Juliet</i></b> e <b><i>A Midsummer Night's Dream</i></b>;
 			</li>
-			<li>la <b>seconda fase</b> (1596-1600 circa); scrisse altre opere storiche come
+			<li>la <b>seconda fase</b> (1596-1600 circa): scrisse altre opere storiche come
 				<b><i>Richard II</i></b>, <b><i>Henry V</i></b> e <b><i>Henry IV</i></b>, raccontando
 				i momenti cruciali del XIV secolo e la Guerra delle Due Rose. Inoltre,
 				analizzò psicologicamente i suoi personaggi, che avevano caratteristiche più
 				complesse delle prime opere;
 			</li>
-			<li>la <b>terza fase</b> (1600-1610 circa); Shakespeare si dedicò alle grandi tragedie,
+			<li>la <b>terza fase</b> (1600-1610 circa): Shakespeare si dedicò alle grandi tragedie,
 				tra le quali <b><i>Othello</i></b>, <b><i>Hamlet</i></b>, <b><i>King Lear</i></b>, <b><i>
 				Macbeth</i></b> e <b><i>Anthony and Cleopatra</i></b>; i temi affrontati sono la 
 				solitudine dell'uomo nell'universo, la sua follia e il suo destino,
 				mentre i personaggi vivono un forte conflitto interiore;
 			</li>
-			<li>la <b>quarta ed ultima fase</b> (1610-1611 circa); Shakespeare scrisse opere fantastiche
+			<li>la <b>quarta ed ultima fase</b> (1610-1611 circa): Shakespeare scrisse opere fantastiche
 				chiamate <i>romances</i>, come <b><i>The Winter's Tale</i></b>, <b><i>Cybelin</i></b> e 
 				<b><i>The Tempest</i></b>.
 			</li>
